Partial_14Dec2021/force-app/main/default/objects/Promotion__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Vertical__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Architects / Engineers / Consultants Factory Visit</fullName>
            </value>
            <value>
                <fullName>Architects Meets</fullName>
            </value>
            <value>
                <fullName>Boarers Meets</fullName>
            </value>
            <value>
                <fullName>Builders Meets</fullName>
            </value>
            <value>
                <fullName>Column Dealer / Distributor Meets</fullName>
            </value>
            <value>
                <fullName>Column Distributors / Dealers Factory Visit</fullName>
            </value>
            <value>
                <fullName>Column DSM Meet / Training</fullName>
            </value>
            <value>
                <fullName>Engineers Meets</fullName>
            </value>
            <value>
                <fullName>Exhibition / Agri Fairs</fullName>
            </value>
            <value>
                <fullName>Exhibition / Construction Fairs</fullName>
            </value>
            <value>
                <fullName>Group Activity</fullName>
            </value>
            <value>
                <fullName>Inshop Boarers Meets</fullName>
            </value>
            <value>
                <fullName>Inshop Mechanic Meets</fullName>
            </value>
            <value>
                <fullName>Inshop Plumber Meets</fullName>
            </value>
            <value>
                <fullName>Jeep Campaign</fullName>
            </value>
            <value>
                <fullName>Mechanics Factory Visit</fullName>
            </value>
            <value>
                <fullName>Mega Farmer Meets</fullName>
            </value>
            <value>
                <fullName>Mega Mechanic Meets</fullName>
            </value>
            <value>
                <fullName>Mega Plumbers Meets</fullName>
            </value>
            <value>
                <fullName>Mini Farmer Meet</fullName>
            </value>
            <value>
                <fullName>Naaka Meets</fullName>
            </value>
            <value>
                <fullName>Onsite Plumber Meets</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Plumbers Factory Visit</fullName>
            </value>
            <value>
                <fullName>Plumbing Dealer / Distributor Meets</fullName>
            </value>
            <value>
                <fullName>Plumbing Dealers Factory Visits</fullName>
            </value>
            <value>
                <fullName>Plumbing DSM Meet/Training</fullName>
            </value>
            <value>
                <fullName>Product Presentation</fullName>
            </value>
            <value>
                <fullName>Projects DSM Meet / Training</fullName>
            </value>
            <value>
                <fullName>Shandy Shows</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>