Partial_14Dec2021/force-app/main/default/objects/Promotion__c/fields/Type_Of_Activity__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Activity__c</fullName>
    <label>Type Of Activity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Jeep Campaign</fullName>
            </value>
            <value>
                <fullName>Tractor Show</fullName>
            </value>
            <value>
                <fullName>Shandy Show</fullName>
            </value>
            <value>
                <fullName>Farmer Meet</fullName>
            </value>
            <value>
                <fullName>Mini Meet</fullName>
            </value>
            <value>
                <fullName>Mechanic Meet</fullName>
            </value>
            <value>
                <fullName>Exhibition</fullName>
            </value>
            <value>
                <fullName>Mechanic VIsit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>