Partial_14Dec2021/force-app/main/default/objects/Promotion__c/fields/User_State__c.field-meta.xml
<CustomField>
    <fullName>User_State__c</fullName>
    <formula>Owner:User.User_State__c</formula>
    <label>User State</label>
    <type>Text</type>
</CustomField>