Partial_14Dec2021/force-app/main/default/objects/Promotion__c/fields/Vehicle_No__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_No__c</fullName>
    <label>Vehicle No</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AP-03 BU-4368</fullName>
            </value>
            <value>
                <fullName>AP-09 CG-5812</fullName>
            </value>
            <value>
                <fullName>AP-10 AY-3375</fullName>
            </value>
            <value>
                <fullName>AP-16 CC-6437</fullName>
            </value>
            <value>
                <fullName>AP-16- CJ-3483</fullName>
            </value>
            <value>
                <fullName>AP-16 DC-1872</fullName>
            </value>
            <value>
                <fullName>BR-01 PF-1877</fullName>
            </value>
            <value>
                <fullName>BR-01 PG-4148</fullName>
            </value>
            <value>
                <fullName>CG-04 HU-6194</fullName>
            </value>
            <value>
                <fullName>GJ-01-DV-6931</fullName>
            </value>
            <value>
                <fullName>GJ-01 RC-2583</fullName>
            </value>
            <value>
                <fullName>GJ-01  RK-7129</fullName>
            </value>
            <value>
                <fullName>HR-70 A-8201</fullName>
            </value>
            <value>
                <fullName>KA-51 A-9336</fullName>
            </value>
            <value>
                <fullName>KA-51 MG-7459</fullName>
            </value>
            <value>
                <fullName>KA-51 MQ-7465</fullName>
            </value>
            <value>
                <fullName>KA-51 Z-7948</fullName>
            </value>
            <value>
                <fullName>MH-12 GT-7088</fullName>
            </value>
            <value>
                <fullName>MH-12 JF-543</fullName>
            </value>
            <value>
                <fullName>MH-12 LV-4363</fullName>
            </value>
            <value>
                <fullName>MH-12 MB-8129</fullName>
            </value>
            <value>
                <fullName>MH-12 MB-8130</fullName>
            </value>
            <value>
                <fullName>MP-09 CM-8052</fullName>
            </value>
            <value>
                <fullName>MP-09 CT-8096</fullName>
            </value>
            <value>
                <fullName>MP-09 GG-3009</fullName>
            </value>
            <value>
                <fullName>MP-09 TR-1824</fullName>
            </value>
            <value>
                <fullName>PB-10 ET-2221</fullName>
            </value>
            <value>
                <fullName>PB-10 FH-2329</fullName>
            </value>
            <value>
                <fullName>RJ-14 UC-7914</fullName>
            </value>
            <value>
                <fullName>RJ-14 UC-8870</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>