Partial_14Dec2021/force-app/main/default/objects/Promotion__c/fields/Verified_Number_of_Attended_Members__c.field-meta.xml
<CustomField>
    <fullName>Verified_Number_of_Attended_Members__c</fullName>
    <label>Verified Number of Attended Members</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>