Partial_14Dec2021/force-app/main/default/objects/Promotion__c/fields/video_shown__c.field-meta.xml
<CustomField>
    <fullName>video_shown__c</fullName>
    <defaultValue>false</defaultValue>
    <label>video shown</label>
    <type>Checkbox</type>
</CustomField>