Partial_14Dec2021/force-app/main/default/objects/Promotion__c/fields/Visit_Entry_Date__c.field-meta.xml
<CustomField>
    <fullName>Visit_Entry_Date__c</fullName>
    <formula>Site_Visit__r.Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visit Entry Date</label>
    <type>Date</type>
</CustomField>