Partial_14Dec2021/force-app/main/default/objects/Promotion__c/fields/Worked_With__c.field-meta.xml
<CustomField>
    <fullName>Worked_With__c</fullName>
    <formula>Site_Visit__r.Worked_withTL__r.FirstName &amp; &apos; &apos; &amp; Site_Visit__r.Worked_withTL__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Worked With</label>
    <type>Text</type>
</CustomField>