Partial_14Dec2021/force-app/main/default/objects/Promotion__c/validationRules/Atleast_One_Lookup_is_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Atleast_One_Lookup_is_Mandatory</fullName>
    <active>true</active>
    <description>Atleast One Lookup is Mandatory when type is Mini Meet.</description>
    <errorConditionFormula>AND(
NOT($Profile.Name==&apos;HO NEW&apos;),
NOT($Profile.Name==&apos;System Administrator&apos;),
ISPICKVAL(Type__c ,&apos;Mini Meet&apos;),

ISBLANK( Dealer1__c ), 
ISBLANK( Distributor__c ),
ISBLANK( Projects__c ))</errorConditionFormula>
    <errorMessage>Atleast One Account Lookup is Mandatory</errorMessage>
</ValidationRule>