Partial_14Dec2021/force-app/main/default/objects/Promotion__c/validationRules/Order_value_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Order_value_mandatory</fullName>
    <active>false</active>
    <description>To make &quot;Order Value Received&quot; field mandatory when Promotion &quot;Type&quot; is &quot;Column Dealer / Distributor Meets&quot; or &quot;Plumbing Dealer / Distributor Meets&quot;.</description>
    <errorConditionFormula>AND(  OR(ISPICKVAL(Type__c , &apos;Column Dealer / Distributor Meets&apos;), ISPICKVAL(Type__c , &apos;Plumbing Dealer / Distributor Meets&apos;) ) ,  ISNULL(Order_Value_Received__c) )</errorConditionFormula>
    <errorMessage>Please enter the Order value.</errorMessage>
</ValidationRule>