Partial_14Dec2021/force-app/main/default/objects/Promotion__c/validationRules/Site_Visit_Mandatory_in_Visit_page.validationRule-meta.xml
<ValidationRule>
    <fullName>Site_Visit_Mandatory_in_Visit_page</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK( Site_Visit__c )</errorConditionFormula>
    <errorMessage>You should not create Promotions directly Please create from Visit Entry ..!!</errorMessage>
</ValidationRule>