Partial_14Dec2021/force-app/main/default/objects/Promotion__c/validationRules/verified_is_checked_status_is_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>verified_is_checked_status_is_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Verified__c = TRUE, 
OR( 
INCLUDES( Verification_Status1__c ,&quot;&quot; ), 
ISBLANK( Call_Center_Remarks__c )))</errorConditionFormula>
    <errorMessage>Please Enter Verification Status and Call Center Remarks...!!!</errorMessage>
</ValidationRule>