Partial_14Dec2021/force-app/main/default/objects/Promotion__c/listViews/April.listView-meta.xml
<ListView>
    <fullName>April</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Date__c</columns>
    <columns>Date_Created__c</columns>
    <columns>Dealer1__c</columns>
    <columns>Location__c</columns>
    <columns>District__c</columns>
    <columns>Actual_No_of_Members__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Jeep Campaign,Shandy Shows,Tractor Show</value>
    </filters>
    <label>December</label>
</ListView>